--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
+    "cors": "^2.8.5",
     "css-loader": "^6.7.1",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
+    "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
+    "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
     "notiflix": "^3.2.5",
     "prop-types": "^15.8.1",
@@ -19,6 +24,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-dropdown": "^1.11.0",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
